<resources>
    <string name="app_name">Vote-firebase</string>
    <string name="password">Password</string>
    <string name="id">ID</string>
    <string name="surname">Surname</string>
    <string name="re">Re-enter Password</string>
    <string name="county">County</string>
    <string name="Firstname">Firstname</string>
    <string name="vote">Vote</string>
    <string name="title_activity_senator">senator</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="county_senator">County Senator</string>
</resources>